# internal/routers/admin/upload.go
@@ -17,6 +17,14 @@ func NewUpload() Upload {
 	return Upload{}
 }
 
+// UploadFile @Summary 上传图片
+//@Produce  json
+//@Params file file true "图片"
+//@Params type int true "图片类型"
+// @Success 200 {string} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/admin/upload/file [post]
 func (u Upload) UploadFile(c *gin.Context) {
 	response := app.NewResponse(c)
 	file, fileHeader, err := c.Request.FormFile("file")
